force-app/main/default/objects/copado__MC_Result__e/copado__MC_Result__e.object-meta.xml
<CustomObject>
    <label>MC Result</label>
    <pluralLabel>MC Results</pluralLabel>
</CustomObject>