force-app/main/default/objects/copado__MC_Result__e/fields/copado__Error_Code__c.field-meta.xml
<CustomField>
    <fullName>copado__Error_Code__c</fullName>
    <label>Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>