force-app/main/default/objects/copado__MC_Result__e/fields/copado__Progress_Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Progress_Status__c</fullName>
    <label>Progress Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>