force-app/main/default/objects/copado__MC_Result__e/fields/copado__Result_Data__c.field-meta.xml
<CustomField>
    <fullName>copado__Result_Data__c</fullName>
    <label>Result Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>