force-app/main/default/objects/copado__MC_Result__e/fields/copado__ResultId__c.field-meta.xml
<CustomField>
    <fullName>copado__ResultId__c</fullName>
    <label>Result Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>